unpackaged/main/default/objects/nbavs__Device__c/nbavs__Device__c.object-meta.xml
<CustomObject>
    <label>Device</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Devices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>