unpackaged/main/default/objects/nbavs__Device__c/fields/nbavs__Description__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Description__c</fullName>
    <label>Description</label>
    <length>32</length>
    <type>Text</type>
</CustomField>