unpackaged/main/default/objects/nbavs__Device__c/fields/nbavs__Enabled__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Enabled__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>