unpackaged/main/default/objects/nbavs__Device__c/fields/nbavs__Extension__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Extension__c</fullName>
    <label>Device Extension</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>