unpackaged/main/default/objects/nbavs__Device__c/fields/nbavs__Id__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Id__c</fullName>
    <description>Device Id from API</description>
    <externalId>true</externalId>
    <label>External Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>