unpackaged/main/default/objects/nbavs__Device__c/fields/nbavs__Location__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Location__c</fullName>
    <label>Location</label>
    <length>32</length>
    <type>Text</type>
</CustomField>