unpackaged/main/default/objects/nbavs__Device__c/fields/nbavs__MAC__c.field-meta.xml
<CustomField>
    <fullName>nbavs__MAC__c</fullName>
    <label>MAC</label>
    <length>64</length>
    <type>Text</type>
</CustomField>