unpackaged/main/default/objects/nbavs__Device__c/fields/nbavs__Model__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Model__c</fullName>
    <label>Model</label>
    <length>32</length>
    <type>Text</type>
</CustomField>