unpackaged/main/default/objects/nbavs__Device__c/fields/nbavs__Password__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Password__c</fullName>
    <label>Password</label>
    <length>255</length>
    <type>Text</type>
</CustomField>