unpackaged/main/default/objects/nbavs__Device__c/fields/nbavs__Registered__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Registered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Device Registered Status of the Field by Default false.</description>
    <label>Registered</label>
    <type>Checkbox</type>
</CustomField>