unpackaged/main/default/objects/nbavs__Device__c/fields/nbavs__RegistrationExpiry__c.field-meta.xml
<CustomField>
    <fullName>nbavs__RegistrationExpiry__c</fullName>
    <description>Device Registration Expiry Date Time.</description>
    <label>RegistrationExpiry</label>
    <type>DateTime</type>
</CustomField>