unpackaged/main/default/objects/nbavs__Device__c/fields/nbavs__Type__c.field-meta.xml
<CustomField>
    <fullName>nbavs__Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Desk Phone</fullName>
            </value>
            <value>
                <fullName>Web Phone</fullName>
            </value>
            <value>
                <fullName>Soft Phone</fullName>
                <default>true</default>
                <label>Soft Phone</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>