unpackaged/main/default/objects/nbavs__Device__c/listViews/nbavs__All.listView-meta.xml
<ListView>
    <fullName>nbavs__All</fullName>
    <columns>nbavs__Id__c</columns>
    <columns>nbavs__Extension__c</columns>
    <columns>nbavs__Description__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>